# bd-shrink

./: .gitignore  AGENTS.md  INSTALL.md  README.md  bd_shrink.sh  pyproject.toml
.github/workflows/: ci.yml
bd_shrink/: __init__.py  __main__.py  audio.py  budget.py  classify.py  cli.py  config.py  deps.py  encode.py  inventory.py  iso.py  logging_setup.py  mpls.py  rebuild.py  runner.py  tui.py  validate.py
tests/: conftest.py  test_audio.py  test_budget.py  test_classify.py  test_cli.py  test_encode.py  test_inventory.py  test_mpls.py  test_orchestrate.py  test_rebuild_validate_iso.py  test_runner.py  test_scaffold.py  test_tui.py
